--- a/index.css
+++ b/index.css
@@ -34,6 +34,12 @@ nav div {
     padding: 5px 15px 5px 15px;
     box-sizing: border-box;
     margin: 1rem 1rem;
+    transition-duration: 0.4s;
+}
+
+.btnSign:hover{
+    color: black;
+    background-color: white;
 }
 
 .btnSubmit{
@@ -45,6 +51,13 @@ nav div {
     padding: 5px 15px 5px 15px;
     box-sizing: border-box;
     margin: 1rem 1rem;
+    transition-duration: 0.4s;
+}
+
+.btnSubmit:hover{
+    color: black;
+    background-color: white;
+    border-color: black;
 }
 
 header {
@@ -118,6 +131,7 @@ header h1 {
     height: 4rem;
     border-radius: 4px;
     border: 1px solid;
+    font-size: 26px;
 }
 
 .item img {
@@ -143,6 +157,10 @@ header h1 {
 
 footer{
     background-color: #000000;
+}
+footer a{
+    text-decoration: none;
+    color: white;
 }
 
 footer div{
